# chip8-emulator-python

./: AGENTS.md  README.md  create_test_binary.py  debugtest.py  main.py  pyproject.toml
_old/: binary.py
programs/: snake.asm
roms/: snake.ch8
scripts/: create_test_binary.py
src/assembler/: __init__.py  assembler.py  cli.py  encoding.py  errors.py
src/chip8_emulator/: __init__.py  app.py  config.py  core.py  cpu.py  main.py  quirks.py  runtime.py  state.py
tests/: test_assembler.py  test_chip8_compliance.py  test_headless.py  test_layout.py
