[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chip8-emulator-python"
version = "0.1.0"
description = "CHIP-8 emulator"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pygame>=2.6.0",
]

[project.scripts]
chip8 = "chip8_emulator.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
